# insurance-mcp

./: .gitignore  README.md  requirements.txt
insurance-mcp/: insurance-agent-mcp.py  main.py  models.py  pyproject.toml  requirements.txt  server.py
insurance-mcp/client/: base_client.py  http-client.py  stdio-client.py
